# fast_fib_rs

./: Cargo.toml  README.md  test_rug.rs
benches/: main_bench.rs
src/: binet.rs  binet_z5.rs  cassini.rs  cassini_gmp.rs  dp_iterator.rs  fib_finder.rs  gmp.rs  lib.rs  main.rs  mat_exponentiator.rs  memoized.rs  naive.rs  repeated_squaring.rs
