[package]
name = "fast_fib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rug]
version = "1.16.0"
default-features = false
features = ["integer", "float", "rational"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main_bench"
harness = false
